fix dark mode menu colors - add !important

--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -490,7 +490,7 @@
         ul {
           li {
             a {
-              color: #fff;
+              color: #fff !important;
             }
           }
         }
@@ -718,6 +718,7 @@
           }
         }
       }
+
       &.scroll {
         #navbar-menu {
           ul {
